--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-29 17:54+0200\n"
-"PO-Revision-Date: 2013-03-22 20:37+0200\n"
+"PO-Revision-Date: 2013-03-29 21:31+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1306,7 +1305,7 @@ msgstr "PDF küldése"
 
 #: ../code/application/views/includes/template-share-email-popup.php:85
 msgid "Please wait ..."
-msgstr ""
+msgstr "Kérem , várjon...."
 
 #: ../code/application/views/includes/template-share-email-popup.php:90
 #: ../code/application/views/helpfile/pofields.php:684
@@ -3756,9 +3755,8 @@ msgid "Please Wait"
 msgstr "Kérjük válasszon "
 
 #: ../code/application/views/city_view.php:351
-#, fuzzy
 msgid "From"
-msgstr "Feladó:"
+msgstr "Feladó"
 
 #: ../code/application/views/city_view.php:352
 #, fuzzy
@@ -7581,9 +7579,9 @@ msgstr ""
 "magasabb árat nem kell fizetnie."
 
 #: ../code/application/views/helpfile/pofields.php:704
-#, fuzzy, php-format
+#, php-format
 msgid "Price for %d nights per person"
-msgstr "7 éj / főre vonatkozó ár"
+msgstr "%d éj / főre vonatkozó ár"
 
 #: ../code/application/views/helpfile/pofields.php:705
 #, php-format
@@ -7618,19 +7616,19 @@ msgstr "1 fő / 1 hálószoba."
 
 #: ../code/application/views/helpfile/pofields.php:712
 #: ../code/application/views/helpfile/pofields.php:714
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in 1 Bedroom."
-msgstr "7 fő / 1 hálószoba."
+msgstr "%d fő / 1 hálószoba."
 
 #: ../code/application/views/helpfile/pofields.php:713
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (%d guests in each room)."
-msgstr "7 fő / 7 hálószoba (7 vendég szobánként)"
+msgstr "%d fő / %d hálószoba (%d vendég szobánként)"
 
 #: ../code/application/views/helpfile/pofields.php:715
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms ( 1 guest in each room)."
-msgstr "7 fő / 7 hálószoba (1 vendég szobánként)"
+msgstr "%d fő / %d hálószoba (1 vendég szobánként)"
 
 #: ../code/application/views/helpfile/pofields.php:716
 #, php-format
@@ -7653,13 +7651,13 @@ msgid "Average per night per room"
 msgstr "Éj / főre vonatkozó átlag"
 
 #: ../code/application/views/helpfile/pofields.php:721
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You can only book up to %d guests at a time. You can book more than %d "
 "guests by going to our group section on top of this page."
 msgstr ""
-"Egyszerre csak 7 fő számára foglalhat szállást.  Amennyiben 7-nél több főre "
-"szeretne szállást foglalni, kérem használja az oldal tetején található "
+"Egyszerre csak %d fő számára foglalhat szállást.  Amennyiben %d-nél több "
+"főre szeretne szállást foglalni, kérem használja az oldal tetején található "
 "csoportos foglalás lehetőséget."
 
 #: ../code/application/views/helpfile/pofields.php:722
@@ -7673,9 +7671,9 @@ msgid "You will use 1 full dorm."
 msgstr "1 teljes kollégiumi szobát fog használni."
 
 #: ../code/application/views/helpfile/pofields.php:725
-#, fuzzy, php-format
+#, php-format
 msgid "You will use %d full dorms."
-msgstr "7 teljes kollégiumi szobát fog használni."
+msgstr "%d teljes kollégiumi szobát fog használni."
 
 #: ../code/application/views/helpfile/pofields.php:726
 #, php-format
@@ -7689,10 +7687,10 @@ msgstr ""
 "1 kollégiumi szobát teljes mértékben, 1-et pedig részben fog használni."
 
 #: ../code/application/views/helpfile/pofields.php:728
-#, fuzzy, php-format
+#, php-format
 msgid "You will use %d full dorms and 1 partially."
 msgstr ""
-"7 kollégiumi szobát teljes mértékben, 1-et pedig részben fog használni."
+"%d kollégiumi szobát teljes mértékben, 1-et pedig részben fog használni."
 
 #: ../code/application/views/helpfile/pofields.php:729
 #, php-format
@@ -7719,33 +7717,33 @@ msgid "1 fully available dorm."
 msgstr "1 teljes mértékben szabad kollégiumi szoba."
 
 #: ../code/application/views/helpfile/pofields.php:733
-#, fuzzy, php-format
+#, php-format
 msgid "%d fully available dorms."
-msgstr "7 teljes mértékben szabad kollégiumi szoba."
+msgstr "%d teljes mértékben szabad kollégiumi szoba."
 
 #: ../code/application/views/helpfile/pofields.php:734
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "1 fully available dorm and 1 already partially occupied (beds already "
 "occupied: %d)."
 msgstr ""
 "1 teljes mértékben szabad kollégiumi szoba és 1 részben foglalt (foglalt "
-"ágyak száma:7)."
+"ágyak száma:%d)."
 
 #: ../code/application/views/helpfile/pofields.php:735
-#, fuzzy, php-format
+#, php-format
 msgid "This dorm is already partially occupied (beds already occupied: %d)."
 msgstr ""
-"Ezt a kollégiumi szobát már részben lefoglalták (foglalt ágyak száma:7)."
+"Ezt a kollégiumi szobát már részben lefoglalták (foglalt ágyak száma:%d)."
 
 #: ../code/application/views/helpfile/pofields.php:736
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "%d dorms fully available and 1 dorm already partially occupied (beds already "
 "occupied: %d)."
 msgstr ""
-"7 teljes mértékben szabad kollégiumi szoba és 1 részben foglalt (foglalt "
-"ágyak száma:7)."
+"%d teljes mértékben szabad kollégiumi szoba és 1 részben foglalt (foglalt "
+"ágyak száma:%d)."
 
 #: ../code/application/views/helpfile/pofields.php:737
 #, php-format
@@ -7813,9 +7811,9 @@ msgid "This type of dorm can accommodate up to 1 guest per dorm."
 msgstr "Ebben a típusú kollégiumi szobában maximum 1 fő szállásolható el."
 
 #: ../code/application/views/helpfile/pofields.php:750
-#, fuzzy, php-format
+#, php-format
 msgid "This type of dorm can accommodate up to %d guests per dorm."
-msgstr "Ebben a típusú kollégiumi szobában maximum 7 fő szállásolható el."
+msgstr "Ebben a típusú kollégiumi szobában maximum %d fő szállásolható el."
 
 #: ../code/application/views/helpfile/pofields.php:751
 #, php-format
@@ -7823,9 +7821,9 @@ msgid "This type of bedroom can accommodate up to 1 guest per room."
 msgstr "Ebben a típusú hálószobában maximum 1 fő szállásolható el."
 
 #: ../code/application/views/helpfile/pofields.php:752
-#, fuzzy, php-format
+#, php-format
 msgid "This type of bedroom can accommodate up to %d guests per room."
-msgstr "Ebben a típusú hálószobában maximum 7 fő szállásolható el."
+msgstr "Ebben a típusú hálószobában maximum %d fő szállásolható el."
 
 #: ../code/application/views/helpfile/pofields.php:753
 #, php-format
@@ -7848,30 +7846,28 @@ msgstr "Amit maximálisan lefoglalhat"
 #: ../code/application/views/helpfile/pofields.php:756
 #, php-format
 msgid "Please wait…"
-msgstr ""
+msgstr "Kérem , várjon...."
 
 #: ../code/application/views/helpfile/pofields.php:757
-#, fuzzy, php-format
+#, php-format
 msgid "The lowest price per person per night in a dorm in this property: %s"
-msgstr ""
-"Ebben az ingatlanban a legalacsonyabb kollégiumi szoba ár fő / éjre "
-"vonatkozóan:"
+msgstr "Kollégiumi szobában a legalacsonyabb ár fő / éjre vonatkozóan: %s"
 
 #: ../code/application/views/helpfile/pofields.php:758
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "The lowest price per person per night in a private room at this property: %s"
-msgstr "Ebben az ingatlanban a legalacsonyabb szoba ár fő / éjre vonatkozóan:"
+msgstr "Különálló szobában a legalacsonyabb ár fő / éjre vonatkozóan: %s"
 
 #: ../code/application/views/helpfile/pofields.php:759
 #, php-format
 msgid "Lowest night:"
-msgstr ""
+msgstr "Legolcsóbb éj:"
 
 #: ../code/application/views/helpfile/pofields.php:760
-#, fuzzy, php-format
+#, php-format
 msgid "Number of guests for %d nights"
-msgstr "Vendégek száma"
+msgstr "Vendégek száma %d éjszakára"
 
 #: ../code/application/views/helpfile/pofields.php:761
 #, fuzzy, php-format
