--- a/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang_ho.po
+++ b/languages/ci/locale/it_IT/LC_MESSAGES/auberge_lang_ho.po
@@ -8,10 +8,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-29 17:54+0200\n"
-"PO-Revision-Date: 2013-03-22 21:23+0200\n"
+"PO-Revision-Date: 2013-03-30 00:19+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1425,7 +1424,7 @@ msgstr "Ricerca per %s"
 msgid "Please wait while we are finding the best deals for you ..."
 msgstr ""
 "Vi invitiamo ad attendere, stiamo cercando le migliori offerte "
-"personalizzate... "
+"personalizzate… "
 
 #: ../code/application/views/includes/header.php:935
 #: ../code/application/views/helpfile/pofields.php:629
@@ -3817,14 +3816,12 @@ msgid "Selected filters:"
 msgstr "Filtri selezionati:"
 
 #: ../code/application/views/city_view.php:346
-#, fuzzy
 msgid "Please Wait"
-msgstr "Attendere prego…"
+msgstr "Attendere Prego"
 
 #: ../code/application/views/city_view.php:351
-#, fuzzy
 msgid "From"
-msgstr "Da:"
+msgstr "Da"
 
 #: ../code/application/views/city_view.php:352
 #, fuzzy
@@ -7696,9 +7693,9 @@ msgstr ""
 "caso, i nostri prezzi sono garantiti e non pagherete mai di più. "
 
 #: ../code/application/views/helpfile/pofields.php:704
-#, fuzzy, php-format
+#, php-format
 msgid "Price for %d nights per person"
-msgstr "Prezzo per 7 notti per persona"
+msgstr "Prezzo per %d notti per persona"
 
 #: ../code/application/views/helpfile/pofields.php:705
 #, php-format
@@ -7733,19 +7730,19 @@ msgstr "1 ospite in una Camera."
 
 #: ../code/application/views/helpfile/pofields.php:712
 #: ../code/application/views/helpfile/pofields.php:714
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in 1 Bedroom."
-msgstr "7 ospiti in una Camera."
+msgstr "%d ospiti in una Camera."
 
 #: ../code/application/views/helpfile/pofields.php:713
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms (%d guests in each room)."
-msgstr "7 ospiti in 7 Camere (7 ospiti in ogni camera)."
+msgstr "%d ospiti in %d Camere (%d ospiti in ogni camera)."
 
 #: ../code/application/views/helpfile/pofields.php:715
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms ( 1 guest in each room)."
-msgstr "7 ospiti in 7 Camere (1 ospite in ogni camera)."
+msgstr "%d ospiti in %d Camere (1 ospite in ogni camera)."
 
 #: ../code/application/views/helpfile/pofields.php:716
 #, php-format
@@ -7768,13 +7765,13 @@ msgid "Average per night per room"
 msgstr "Prezzo medio a persona per notte"
 
 #: ../code/application/views/helpfile/pofields.php:721
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "You can only book up to %d guests at a time. You can book more than %d "
 "guests by going to our group section on top of this page."
 msgstr ""
-"Potete prenotare fino a 7 ospiti per volta. Potere prenotare più di 7 ospiti "
-"dalla sezione gruppi in alto su questa pagina."
+"Potete prenotare fino a %d ospiti per volta. Potere prenotare più di %d "
+"ospiti dalla sezione gruppi in alto su questa pagina."
 
 #: ../code/application/views/helpfile/pofields.php:722
 #, php-format
@@ -7787,9 +7784,9 @@ msgid "You will use 1 full dorm."
 msgstr "Userete 1 dormitorio per intero."
 
 #: ../code/application/views/helpfile/pofields.php:725
-#, fuzzy, php-format
+#, php-format
 msgid "You will use %d full dorms."
-msgstr "Userete 7 dormitori per intero."
+msgstr "Userete %d dormitori per intero."
 
 #: ../code/application/views/helpfile/pofields.php:726
 #, php-format
@@ -7802,9 +7799,9 @@ msgid "You will use 1 full dorm and 1 partially."
 msgstr "Userete 1 dormitorio per intero e uno in parte."
 
 #: ../code/application/views/helpfile/pofields.php:728
-#, fuzzy, php-format
+#, php-format
 msgid "You will use %d full dorms and 1 partially."
-msgstr "Userete 7 dormitori per intero e 1 in parte."
+msgstr "Userete %d dormitori per intero e 1 in parte."
 
 #: ../code/application/views/helpfile/pofields.php:729
 #, php-format
@@ -7831,31 +7828,33 @@ msgid "1 fully available dorm."
 msgstr "1 dormitorio intero disponibile."
 
 #: ../code/application/views/helpfile/pofields.php:733
-#, fuzzy, php-format
+#, php-format
 msgid "%d fully available dorms."
-msgstr "7 dormitori completi disponibili. "
+msgstr "%d dormitori completi disponibili. "
 
 #: ../code/application/views/helpfile/pofields.php:734
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "1 fully available dorm and 1 already partially occupied (beds already "
 "occupied: %d)."
 msgstr ""
 "1 dormitorio completo disponibile e 1 già parzialmente occupato (letti già "
-"occupati:7)."
+"occupati:%d)."
 
 #: ../code/application/views/helpfile/pofields.php:735
-#, fuzzy, php-format
+#, php-format
 msgid "This dorm is already partially occupied (beds already occupied: %d)."
-msgstr "Questo dormitorio è già parzialmente occupato (letti già occupati: 7)."
+msgstr ""
+"Questo dormitorio è già parzialmente occupato (letti già occupati: %d)."
 
 #: ../code/application/views/helpfile/pofields.php:736
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "%d dorms fully available and 1 dorm already partially occupied (beds already "
 "occupied: %d)."
 msgstr ""
-"7 dormitori occupati per intero e 1 dormitorio già parzialmente occupato: 7)."
+"%d dormitori occupati per intero e 1 dormitorio già parzialmente occupato: "
+"%d)."
 
 #: ../code/application/views/helpfile/pofields.php:737
 #, php-format
@@ -7926,10 +7925,10 @@ msgstr ""
 "Questo tipo di dormitorio può accogliere fino a 1 ospite per dormitorio."
 
 #: ../code/application/views/helpfile/pofields.php:750
-#, fuzzy, php-format
+#, php-format
 msgid "This type of dorm can accommodate up to %d guests per dorm."
 msgstr ""
-"Questo tipo di dormitorio può accogliere fino a 7 ospiti per dormitorio."
+"Questo tipo di dormitorio può accogliere fino a %d ospiti per dormitorio."
 
 #: ../code/application/views/helpfile/pofields.php:751
 #, php-format
@@ -7937,9 +7936,9 @@ msgid "This type of bedroom can accommodate up to 1 guest per room."
 msgstr "Questo tipo di camera può accogliere fino a 1 ospite per camera."
 
 #: ../code/application/views/helpfile/pofields.php:752
-#, fuzzy, php-format
+#, php-format
 msgid "This type of bedroom can accommodate up to %d guests per room."
-msgstr "Questo tipo di camera può accogliere fino a 7 ospiti per camera."
+msgstr "Questo tipo di camera può accogliere fino a %d ospiti per camera."
 
 #: ../code/application/views/helpfile/pofields.php:753
 #, php-format
@@ -7962,39 +7961,39 @@ msgid "Maximum you can book"
 msgstr "Massimo prenotabile"
 
 #: ../code/application/views/helpfile/pofields.php:756
-#, fuzzy, php-format
+#, php-format
 msgid "Please wait…"
-msgstr "Attendere prego…"
+msgstr "Attendere prego..."
 
 #: ../code/application/views/helpfile/pofields.php:757
-#, fuzzy, php-format
+#, php-format
 msgid "The lowest price per person per night in a dorm in this property: %s"
 msgstr ""
 "Il prezzo più basso per persona per notte in un dormitorio in questa "
-"proprietà:"
+"proprietà: %s"
 
 #: ../code/application/views/helpfile/pofields.php:758
-#, fuzzy, php-format
+#, php-format
 msgid ""
 "The lowest price per person per night in a private room at this property: %s"
 msgstr ""
-"Il prezzo più basso per persona per notte in una camera privata in questa "
-"proprietà:"
+"Il prezzo più basso per persona per notte in una stanza privata in questa "
+"proprietà: %s"
 
 #: ../code/application/views/helpfile/pofields.php:759
 #, php-format
 msgid "Lowest night:"
-msgstr ""
+msgstr "Notte con il prezzo più basso:"
 
 #: ../code/application/views/helpfile/pofields.php:760
-#, fuzzy, php-format
+#, php-format
 msgid "Number of guests for %d nights"
-msgstr "Numero di ospiti"
+msgstr "Numero di ospiti per %d notti"
 
 #: ../code/application/views/helpfile/pofields.php:761
-#, fuzzy, php-format
+#, php-format
 msgid "Provided after reservation"
-msgstr "Lascia una recensione"
+msgstr "Fornito dopo la prenotazione"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
