--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-29 17:54+0200\n"
-"PO-Revision-Date: 2013-03-27 23:00+0200\n"
+"PO-Revision-Date: 2013-03-29 21:10+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -7681,9 +7680,9 @@ msgid "%d guests in %d Bedrooms (%d guests in each room)."
 msgstr "7 гостей в 7 Спальнях (7 гостей в каждом номере)."
 
 #: ../code/application/views/helpfile/pofields.php:715
-#, fuzzy, php-format
+#, php-format
 msgid "%d guests in %d Bedrooms ( 1 guest in each room)."
-msgstr "7 гостей в 7 Спальнях (7 гостей в каждом номере)."
+msgstr "%d гостей в %d Спальнях (1 гость в каждом номере)."
 
 #: ../code/application/views/helpfile/pofields.php:716
 #, fuzzy, php-format
@@ -7711,6 +7710,8 @@ msgid ""
 "You can only book up to %d guests at a time. You can book more than %d "
 "guests by going to our group section on top of this page."
 msgstr ""
+"Вы можете забронировать до %d человек за один раз. Вы можете заказать более "
+"%d гостей, зайдя в наш групповой раздел в верхней части этой страницы."
 
 #: ../code/application/views/helpfile/pofields.php:722
 #, fuzzy, php-format
@@ -7720,12 +7721,12 @@ msgstr "Максимальное количество гостей в общеж
 #: ../code/application/views/helpfile/pofields.php:724
 #, php-format
 msgid "You will use 1 full dorm."
-msgstr ""
+msgstr "Вы будете использовать 1 полное общежитие."
 
 #: ../code/application/views/helpfile/pofields.php:725
 #, php-format
 msgid "You will use %d full dorms."
-msgstr ""
+msgstr "Вы будете использовать %d полных общежитий."
 
 #: ../code/application/views/helpfile/pofields.php:726
 #, php-format
